--- a/frontend/features.html
+++ b/frontend/features.html
@@ -129,21 +129,45 @@
   .btn.back:hover{background:var(--dark-teal);color:#fff;transform:translateY(-2px)}
 
   /* ====== Feature pills — CENTERED ====== */
-  .feature-tabs{
-    display:flex;gap:16px;flex-wrap:wrap;margin:12px auto 18px;
-    justify-content:center;          /* <— centered */
-    align-items:center;
-    max-width:800px;
-  }
-  .feature-tab{
-    display:inline-block;padding:10px 18px;border-radius:999px;border:3px dashed var(--warm-green);
-    background:var(--warm-green-10);font-family:"Rockwell","AmericanTypewriter","Courier New",Courier,Georgia,serif;font-weight:700;letter-spacing:.5px;
-    transition:.2s transform,.2s box-shadow,.2s background,.2s color,.2s border-color; outline:0;
-  }
-  .feature-tab:hover{transform:translateY(-2px)}
-  .feature-tab.active{background:var(--warm-green);color:#fff}
-  /* ARIA states */
-  .feature-tab[aria-selected="true"]{background:var(--warm-green);color:#fff}
+/* ====== FEATURE BUTTONS (INTERACTIVE) ====== */
+.feature-tab {
+  display: inline-block;
+  padding: 12px 26px;
+  border-radius: 40px;
+  border: 2px solid var(--dark-teal);
+  background: #f8fafa;
+  color: var(--dark-teal);
+  font-family: "Rockwell","AmericanTypewriter","Courier New",Courier,Georgia,serif;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  cursor: pointer;
+  transition: all 0.25s ease;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+}
+
+/* Hover: lift + color inversion + soft shadow */
+.feature-tab:hover {
+  background: var(--dark-teal);
+  color: #fff;
+  transform: translateY(-3px);
+  box-shadow: 0 6px 16px rgba(0,90,99,0.3);
+}
+
+/* Active (clicked or selected) state */
+.feature-tab.active,
+.feature-tab[aria-selected="true"] {
+  background: var(--warm-green);
+  color: #fff;
+  border-color: var(--warm-green);
+  box-shadow: 0 6px 14px rgba(81,122,6,0.35);
+}
+
+/* Pressed feel */
+.feature-tab:active {
+  transform: translateY(0);
+  box-shadow: 0 3px 6px rgba(0,0,0,0.15);
+}
+
 
   /* ====== Panels ====== */
   .panel{background:#fff;border-radius:14px;border:3px solid var(--dark-teal);border-top-color:var(--teal);border-left-color:var(--teal);
