--- a/frontend/features.html
+++ b/frontend/features.html
@@ -15,10 +15,37 @@
     --light-grey:#DBDBDB; --dark-grey:#737373; --white:#FFFFFF;
     --danger:#E03131; --danger-15:rgba(224,49,49,.15);
   }
-  *{box-sizing:border-box}
-  html,body{margin:0;padding:0}
-  body{font-family:"Droid Serif", Georgia, serif; color:#122022; background:#fff}
-  a{color:inherit;text-decoration:none}
+  
+* {
+  box-sizing: border-box;
+}
+
+/* Reset unwanted borders/outlines on root */
+html, body {
+  margin: 0;
+  padding: 0;
+  border: none;
+  outline: none;
+  background: #fff; /* or var(--white) */
+  box-shadow: none;
+}
+
+/* Keep text and links consistent */
+body {
+  font-family: "Droid Serif", Georgia, serif;
+  color: #122022;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+/* Remove focus outline from body but keep for UI elements */
+body:focus {
+  outline: none !important;
+}
+
 
   /* ====== Header (copied from dashboard) ====== */
   .navbar{background:var(--dark-teal);color:#fff;position:sticky;top:0;z-index:40}
