--- a/frontend/features.html
+++ b/frontend/features.html
@@ -14,38 +14,15 @@
     --blue:#00A6FF; --blue-10:rgba(0,166,255,.10); --blue-30:rgba(0,166,255,.30);
     --light-grey:#DBDBDB; --dark-grey:#737373; --white:#FFFFFF;
     --danger:#E03131; --danger-15:rgba(224,49,49,.15);
-  }
-  
-* {
-  box-sizing: border-box;
-}
-
-/* Reset unwanted borders/outlines on root */
+  } *{box-sizing:border-box}
 html, body {
-  margin: 0;
-  padding: 0;
-  border: none;
-  outline: none;
-  background: #fff; /* or var(--white) */
-  box-shadow: none;
+  margin:0;
+  padding:0;
+  border:none;
+  outline:none;
+  box-shadow:none;
+  background:#fff;
 }
-
-/* Keep text and links consistent */
-body {
-  font-family: "Droid Serif", Georgia, serif;
-  color: #122022;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-/* Remove focus outline from body but keep for UI elements */
-body:focus {
-  outline: none !important;
-}
-
 
   /* ====== Header (copied from dashboard) ====== */
   .navbar{background:var(--dark-teal);color:#fff;position:sticky;top:0;z-index:40}
