--- a/frontend/features.html
+++ b/frontend/features.html
@@ -367,6 +367,11 @@ footer{
   from {opacity: 0; transform: translateY(-4px);}
   to {opacity: 1; transform: translateY(0);}
 }
+
+  .feature-section:focus {
+  outline: none !important;
+}
+
   
 </style>
 </head>
