--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -8,6 +8,7 @@
 <!-- Favicon -->
 <link rel="icon" href="assests/Ink-logo.png" type="image/png" />
 <link rel="stylesheet" href="dashboard.css">
+<link rel="stylesheet" href="style.css">
 </head>
 
 
