--- a/frontend/features.html
+++ b/frontend/features.html
@@ -6,6 +6,7 @@
 <title>Ink Insights — Features</title>
 <link rel="icon" href="assests/Ink-logo.png" type="image/png" />
 <link rel="stylesheet" href="features.css">
+<link rel="stylesheet" href="style.css">
 </head>
 
 
