--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -7,114 +7,16 @@
 
 <!-- Favicon -->
 <link rel="icon" href="assests/Ink-logo.png" type="image/png" />
-
+<link rel="stylesheet" href="style.css">
 <style>
-  :root{
-    --dark-teal:#005A63; --teal:#257881;
-    --warm-green:#517A06; --warm-green-20:rgba(81,122,6,.20); --warm-green-30:rgba(81,122,6,.30);
-    --pink:#FF2092; --pink-20:rgba(255,32,146,.20); --pink-30:rgba(255,32,146,.30);
-    --blue:#00A6FF;  --blue-20:rgba(0,166,255,.20); --blue-30:rgba(0,166,255,.30);
-    --light-grey:#DBDBDB; --dark-grey:#737373; --white:#FFFFFF;
-    --ink:#000; --bg:#fff;
-  }
+
 
   *{box-sizing:border-box}
   html,body{margin:0;padding:0}
   body{font-family:"Droid Serif", Georgia, serif; color:#122022; background:var(--bg); line-height:1.55}
   a{color:inherit;text-decoration:none}
 
-/* ================= HEADER ================= */
-.navbar{
-  background:var(--dark-teal);
-  color:#fff;
-  position:sticky;
-  top:0;
-  z-index:40;
-}
-.nav-inner{width:100%;padding:20px 28px 16px;display:flex;align-items:center;gap:24px;justify-content:space-between}
-.brand a{display:flex;align-items:center;gap:10px;color:#fff;transition:transform .2s ease}
-.brand a:hover{transform:translateY(-1px) scale(1.02)}
-.brand img{width:54px;height:auto;transition:transform .4s ease,filter .4s ease}
-.brand a:hover img{transform:rotate(-3deg) scale(1.06);filter:drop-shadow(0 0 6px rgba(255,255,255,.85))}
-.brand .txt{display:flex;flex-direction:column;line-height:1.15}
-.brand .txt .line1{font:400 1.1rem/1 "Droid Serif",serif}
-.brand .txt .line2{
-  font:700 1.4rem/1.1 "Droid Serif",serif;
-  background:linear-gradient(90deg,#fff,var(--blue),var(--pink),#fff);
-  background-size:300%;
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
-  animation:colorFlow 6s linear infinite;
-}
-@keyframes colorFlow{0%{background-position:0% 50%}100%{background-position:100% 50%}}
 
-.navlinks{flex:1;display:flex;justify-content:center;gap:34px}
-.navlinks a{
-  font-family:"Rockwell","Courier New",Courier,Georgia,serif;font-weight:700;color:#fff;position:relative;padding:6px 2px;
-  transition:color .2s ease,text-shadow .2s ease;
-}
-.navlinks a::after{content:"";position:absolute;left:0;right:0;bottom:-6px;height:2px;background:#fff;transform:scaleX(0);transform-origin:left;transition:transform .25s ease}
-.navlinks a:hover{text-shadow:0 0 10px rgba(255,255,255,.35)}
-.navlinks a:hover::after{transform:scaleX(1)}
-
-.actions{margin-left:auto;display:flex;align-items:center;gap:16px}
-  
-.nav-cta{
-  font-family:"Rockwell","Courier New";
-  font-weight:400;
-  background:#fff;
-  color:var(--dark-teal);
-  padding:8px 14px; 
-  border-radius:24px;
-  position:relative;
-  overflow:hidden;
-  transition:all .3s ease;
-  white-space:nowrap;
-  font-size:clamp(0.75rem, 1.6vw, 1rem);
-}
-.nav-cta:hover{background:#000;color:#fff;transform:translateY(-2px);box-shadow:0 0 20px rgba(255,255,255,.6)}
-.nav-cta::before{
-  content:"";position:absolute;top:0;left:-50%;width:50%;height:100%;
-  background:linear-gradient(120deg,rgba(255,255,255,0) 0%,rgba(255,255,255,.6) 50%,rgba(255,255,255,0) 100%);
-  transform:skewX(-25deg);animation:shine 2s linear infinite;
-}
-@keyframes shine{0%{left:-50%}100%{left:150%}}
-
-@media(max-width:900px){
-  .nav-cta{
-    padding:6px 10px;
-    font-size:0.8rem;
-  }
-  .actions{
-    gap:8px;
-  }
-}
-.hamb{width:30px;height:22px;cursor:pointer;display:flex;flex-direction:column;justify-content:space-between;transition:transform .2s ease}
-.hamb:hover{transform:scale(1.06)}
-.hamb span{height:3px;background:#fff;border-radius:2px;display:block;transition:transform .25s ease,opacity .25s ease}
-.hamb.open span:nth-child(1){transform:translateY(9px) rotate(45deg)}
-.hamb.open span:nth-child(2){opacity:0}
-.hamb.open span:nth-child(3){transform:translateY(-9px) rotate(-45deg)}
-@media(max-width:900px){.navlinks{display:none}}
-
-/* Drawer */
-.drawer{position:fixed;top:0;right:-320px;width:300px;height:100dvh;background:#fff;color:var(--dark-teal);
-box-shadow:-10px 0 24px rgba(0,0,0,.28);transition:right .35s cubic-bezier(.22,1,.36,1);padding:22px;z-index:50}
-.drawer.open{right:0}
-.scrim{position:fixed;inset:0;background:rgba(0,0,0,.35);opacity:0;pointer-events:none;transition:opacity .3s ease;z-index:45}
-.scrim.show{opacity:1;pointer-events:auto}
-.drawer .menu-title{text-align:center;font:700 20px/1 "Rockwell","Courier New";text-decoration:underline;text-underline-offset:6px;margin-bottom:16px}
-.drawer .menu{display:flex;flex-direction:column;gap:12px}
-.drawer .menu a{
-  display:flex;align-items:center;gap:10px;font-family:"Agency FB","Agency",Impact,Haettenschweiler,"Arial Narrow Bold",sans-serif;
-  color:var(--dark-teal);border:2px dashed rgba(0,90,99,.25);background:rgba(0,90,99,.06);
-  padding:12px 10px;border-radius:12px;transition:.25s transform,.25s background;
-}
-.drawer .menu a::before{content:"✦";opacity:.9}
-.drawer .menu a:hover{background:rgba(0,90,99,.12);transform:translateX(4px)}
-.drawer-cta-wrap{text-align:center;margin-top:20px}
-.drawer-cta{display:inline-block;text-align:center;font-family:"Rockwell","Courier New";background:var(--dark-teal);color:#fff;border-radius:24px;padding:10px 18px;transition:background .2s,transform .2s}
-.drawer-cta:hover{background:#000;transform:translateY(-2px)}
 
   /* ================== PAGE ================== */
 .wrap{max-width:1000px;margin:24px auto 64px;padding:0 18px}
