--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -193,32 +193,34 @@
   /* Stack elements in specified order */
   #dropzone {
     order: 1;
-    width: 90%;
-    max-width: 400px;
+    width: 100%;
+    max-width: 500px;
+    align-items: center;
   }
 
   .meta {
     order: 2;
-    width: 90%;
-    max-width: 400px;
+    width: 100%;
+    max-width: 500px;
     text-align: center;
+    align-items: left;
   }
 
   .cta-row {
     order: 3;
-    width: 90%;
-    max-width: 400px;
+    width: 100%;
+    max-width: 500px;
   }
 
   #inst {
     order: 5;
-    width: 90%;
+    width: 1000%;
     max-width: 500px;
   }
 
   #rest {
     order: 6;
-    width: 90%;
+    width: 100%;
     max-width: 500px;
   }
 
