--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -210,11 +210,12 @@
     order: 3;
     width: 100%;
     max-width: 500px;
+    align-items: left;
   }
 
   #inst {
     order: 5;
-    width: 1000%;
+    width: 100%;
     max-width: 500px;
   }
 
