--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -235,6 +235,7 @@
   .dz-stack {
     display: flex;
     flex-direction: column;
+    width: 80%;
     align-items: center;
     justify-content: center;
   }
