--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -231,7 +231,9 @@
   }
 
   /* Center content alignment */
-  .meta-list,
+  .meta-list {
+   align-items: left;
+  }
   .dz-stack {
     display: flex;
     flex-direction: column;
