--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -181,7 +181,8 @@
 @media (max-width: 900px) {
   /* Reorder and center everything vertically */
  .title {
-  text-align: center;}
+  text-align: center;
+  width: 64%;}
  
   .grid {
     display: flex;
@@ -237,7 +238,7 @@
   .dz-stack {
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 60%;
     align-items: center;
     justify-content: center;
   }
