--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -181,8 +181,7 @@
 @media (max-width: 900px) {
   /* Reorder and center everything vertically */
  .title {
-  text-align: center;
-  width: 64%;}
+  text-align: center;}
  
   .grid {
     display: flex;
@@ -238,7 +237,7 @@
   .dz-stack {
     display: flex;
     flex-direction: column;
-    width: 60%;
+    width: 50%;
     align-items: center;
     justify-content: center;
   }
