--- a/frontend/index.html
+++ b/frontend/index.html
@@ -197,6 +197,7 @@
   <!-- ======================= FOOTER ======================= -->
 
 <footer>
+  <footer id="footer-home">
   <div class="footer-container">
     <div class="footer-brand">
       <h2>Start your analysis today!</h2>
