--- a/frontend/index.html
+++ b/frontend/index.html
@@ -196,19 +196,21 @@
 
   <!-- ======================= FOOTER ======================= -->
 
-<footer id="footer-home">
+<footer>
   <div class="footer-container">
     <div class="footer-brand">
-      <h2>Start your analysis today!</h2>
-      <a href="upload.html" class="btn primary big">START ANALYSIS</a>
+      <h1>Start your analysis today!</h1>
+      <a href="upload.html" class="btn footer-btn">START ANALYSIS</a>
       <p>Privacy-first data analysis, designed for writers.</p>
     </div>
+
     <div class="footer-links">
       <a href="#">Privacy Policy</a>
       <a href="#">Terms of Use</a>
       <a href="contact.html">Contact</a>
     </div>
   </div>
+
   <div class="footer-bottom">
     © 2025 Ink Insights — All rights reserved.
   </div>
