--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -146,7 +146,7 @@
 
 <footer>
   <div class="footer-container">
-    <div class="footer-brand">
+    <div class="footer-brand-dashboard">
       <h1>Enjoy Writing!</h1>
       <p>Privacy-first data analysis, designed for writers.</p>
     </div>
