--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -144,18 +144,23 @@
   </main>
 
 
-<footer>
+
+
+<footer id="dashboard-footer">
   <div class="footer-container">
-    <div class="footer-brand-dashboard">
-      <h1>Enjoy Writing!</h1>
+    <div class="footer-brand">
+      <h1>Start your analysis today!</h1>
+      <a href="upload.html" class="btn footer-btn">START ANALYSIS</a>
       <p>Privacy-first data analysis, designed for writers.</p>
     </div>
+
     <div class="footer-links">
       <a href="#">Privacy Policy</a>
       <a href="#">Terms of Use</a>
       <a href="contact.html">Contact</a>
     </div>
   </div>
+
   <div class="footer-bottom">
     © 2025 Ink Insights — All rights reserved.
   </div>
