--- a/frontend/features.html
+++ b/frontend/features.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Ink Insights — Features</title>
 <link rel="icon" href="assests/Ink-logo.png" type="image/png" />
-<link rel="stylesheet" href="features.css">
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="features.css">
 </head>
 
 
@@ -197,7 +197,7 @@
 
 
 
-  <footer>
+  <footer id = "features-footer">
   <div class="footer-container">
     <div class="footer-brand">
       <h1>Enjoy Writing!</h1>
