--- a/frontend/features.html
+++ b/frontend/features.html
@@ -196,7 +196,7 @@
 
 
 
-  <footer id = "features-footer">
+<footer>
   <div class="footer-container">
     <div class="footer-brand">
       <h1>Enjoy Writing!</h1>
