--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -145,7 +145,7 @@
 
 
 
-<footer id = "dashboard-footer">
+<footer>
   <div class="footer-container">
     <div class="footer-brand">
       <h1>Enjoy Writing!</h1>
@@ -157,9 +157,10 @@
       <a href="contact.html">Contact</a>
     </div>
   </div>
-  <div class="footer-bottom">© 2025 Ink Insights — All rights reserved.</div>
+  <div class="footer-bottom">
+    © 2025 Ink Insights — All rights reserved.
+  </div>
 </footer>
-
 
 <script>
 (function(){
